# mp-stats-legacy-viewer

./: .dockerignore  .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  cst.yaml  release-please-config.json  renovate.json
.github/workflows/: build.yaml  release-please.yaml  security.yml  update-files.yaml.yml
apps/converter/: Cargo.toml
apps/converter/src/: lib.rs  main.rs
apps/converter/src/io/: cache.rs  mod.rs  reader.rs  writer.rs
apps/converter/src/models/: leaderboard.rs  mod.rs  player.rs
apps/converter/src/pipeline/: games.rs  leaderboards.rs  metadata.rs  mod.rs  players.rs
apps/converter/tests/: conversion.rs
apps/frontend/: Cargo.toml  Trunk.json  Trunk.toml  index.html  input.css  package-lock.json  package.json  tailwind.config.js
apps/frontend/assets/: input.css
apps/frontend/src/: app.rs  lib.rs  main.rs  route.rs
apps/frontend/src/api/: api.rs  mod.rs
apps/frontend/src/components/: error_message.rs  footer.rs  header.rs  leaderboard.rs  mod.rs  player_card.rs  search_bar.rs
apps/frontend/src/components/leaderboards/: board_type_selector.rs  header.rs  leaderboard_table.rs  mod.rs  pagination_controls.rs  snapshot_selector.rs
apps/frontend/src/hooks/: mod.rs  use_game_leaderboards.rs  use_leaderboard_entries.rs  use_player_profile.rs  use_theme.rs
apps/frontend/src/pages/: home.rs  mod.rs  not_found.rs
apps/frontend/src/pages/java/: game.rs  landing.rs  leaderboard.rs  mod.rs  player.rs
apps/frontend/src/util/: mod.rs  percent.rs  score_formatter.rs
apps/server/: Cargo.toml
apps/server/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: compression.rs  error.rs  formats.rs  lib.rs  shard.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  models.rs  routes.rs
crates/data-client/: Cargo.toml
crates/data-client/src/: api.rs  lib.rs
crates/data-server/: Cargo.toml
crates/data-server/src/: lib.rs  provider.rs
crates/data-server/src/provider/: resolver.rs
crates/data-server/src/provider/loaders/: bedrock.rs  java.rs  mod.rs
data/: LICENSE  README.md
data-test/: LICENSE
data-test/bedrock/: names.tar.xz
data-test/bedrock/dictionary/ids/: 0.json
data-test/bedrock/leaderboards/All/BlockHunt/Wins/: history.tar.xz
data-test/bedrock/leaderboards/All/MobArena/Wins/: history.tar.xz
data-test/bedrock/leaderboards/All/Skyfall/Wins/: history.tar.xz
data-test/bedrock/leaderboards/All/TurfWars/Wins/: history.tar.xz
data-test/bedrock/meta/: map.json
data-test/bedrock/players/: 0.json.xz
data-test/java/: names.tar.xz
data-test/java/dictionary/ids/: 0.json  1.json  10.json  103.json  11.json  112.json  12.json  123.json  13.json  14.json  141.json  147.json  148.json  15.json  150.json  154.json  155.json  16.json  164.json  165.json  167.json  169.json  17.json  176.json  177.json  18.json  182.json  183.json  188.json  189.json  19.json  193.json  198.json  199.json  2.json  20.json  200.json  201.json  203.json  204.json  (+23 more)
data-test/java/leaderboards/All/BaconBrawl/Gems Earned/: history.tar.xz
data-test/java/leaderboards/All/BaconBrawl/Pigs In Blankets/: history.tar.xz
data-test/java/leaderboards/All/BaconBrawl/Wins/: history.tar.xz
data-test/java/leaderboards/Daily/BaconBrawl/Gems Earned/: history.tar.xz
data-test/java/leaderboards/Daily/BaconBrawl/Pigs In Blankets/: history.tar.xz
data-test/java/leaderboards/Daily/BaconBrawl/Wins/: history.tar.xz
data-test/java/leaderboards/Weekly/BaconBrawl/Gems Earned/: history.tar.xz
data-test/java/leaderboards/Weekly/BaconBrawl/Pigs In Blankets/: history.tar.xz
data-test/java/leaderboards/Weekly/BaconBrawl/Wins/: history.tar.xz
data-test/java/meta/: map.json
data-test/java/players/: 0.json.xz  1.json.xz  10.json.xz  11.json.xz  14.json.xz  15.json.xz  16.json.xz  17.json.xz  18.json.xz  19.json.xz  2.json.xz  20.json.xz  3.json.xz
data/bedrock/: names.tar.xz
data/bedrock/dictionary/ids/: 0.json
data/bedrock/leaderboards/All/BlockHunt/Wins/: history.tar.xz
data/bedrock/leaderboards/All/BombLobbers/Wins/: history.tar.xz
data/bedrock/leaderboards/All/Cake Wars Mega/Wins/: history.tar.xz
data/bedrock/leaderboards/All/CakeWars/Wins/: history.tar.xz
data/bedrock/leaderboards/All/CakeWarsDuos/Wins/: history.tar.xz
data/bedrock/leaderboards/All/CakeWarsSolo/Wins/: history.tar.xz
data/bedrock/leaderboards/All/Castle Defense/Wins/: history.tar.xz
data/bedrock/leaderboards/All/CastleDefense2020/Wins/: history.tar.xz
data/bedrock/leaderboards/All/DeathTag/Wins/: history.tar.xz
data/bedrock/leaderboards/All/DragonEscape/Wins/: history.tar.xz
data/bedrock/leaderboards/All/Dragons/Wins/: history.tar.xz
data/bedrock/leaderboards/All/Gladiators/Wins/: history.tar.xz
data/bedrock/leaderboards/All/MasterBuilders/Wins/: history.tar.xz
data/bedrock/leaderboards/All/Merry Mayhem/Wins/: history.tar.xz
data/bedrock/leaderboards/All/MicroBattle/Wins/: history.tar.xz
data/bedrock/meta/: map.json
data/bedrock/players/: 0.json.xz
data/java/dictionary/ids/: 0.json  1.json  10.json  100.json  1000.json  1001.json  1002.json  1003.json  1004.json  1005.json  1006.json  1007.json  1008.json  1009.json  101.json  1010.json  1011.json  1012.json  1013.json  1014.json  1015.json  1016.json  1017.json  1018.json  1019.json  102.json  1020.json  1021.json  1022.json  1023.json  1024.json  1025.json  1026.json  1027.json  1028.json  1029.json  103.json  1030.json  1031.json  1032.json  (+1340 more)
data/java/meta/: map.json
data/java/players/: 1.json.xz  10.json.xz  100.json.xz  101.json.xz  102.json.xz  103.json.xz  104.json.xz  105.json.xz  106.json.xz  107.json.xz  108.json.xz  109.json.xz  11.json.xz  110.json.xz  111.json.xz  112.json.xz  113.json.xz  114.json.xz  115.json.xz  116.json.xz  117.json.xz  118.json.xz  119.json.xz  12.json.xz  120.json.xz  121.json.xz  122.json.xz  123.json.xz  124.json.xz  125.json.xz  126.json.xz  127.json.xz  128.json.xz  129.json.xz  13.json.xz  130.json.xz  131.json.xz  132.json.xz  133.json.xz  134.json.xz  (+97 more)
src/: lib.rs
(+11348 files in other folders)
