[workspace]
members = [
    "crates/core",
    "crates/common",
    "crates/data-server",
    "crates/data-client",
    "apps/frontend",
    "apps/server",
    "apps/converter",
]
resolver = "2"

[profile.dev]
incremental = false

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smol_str = { version = "0.2", features = ["serde"] }
postcard = { version = "1.0", features = ["use-std"] }
flate2 = "1.0"
anyhow = "1.0"
async-trait = "0.1"
csv = "1.3"
yew = { version = "0.22.0", features = ["csr"] }
yew-router = "0.19.0"
gloo-net = "0.6"
gloo-console = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
futures = "0.3"
hex = "0.4"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
indicatif = "0.17"
uuid = { version = "1.21.0", features = ["v4", "serde", "fast-rng", "js"] }
rayon = "1.11.0"
parking_lot = "0.12.5"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlElement", "HtmlInputElement", "HtmlSelectElement", "Window", "Document", "console"] }
lzma-rs = "0.3"
binary-layout = "4.0.2"
tar = "0.4"
dashmap = "6.1.0"
thiserror = "2.0.18"

# Internal crates
mp-stats-core = { path = "crates/core" }
mp-stats-data-server = { path = "crates/data-server" }
mp-stats-data-client = { path = "crates/data-client" }
mp-stats-frontend = { path = "apps/frontend" }
mp-stats-common = { path = "crates/common" }
