[workspace.package]
edition = "2024"

[package]
name = "mp-stats-platform"
version = "0.5.0"
publish = false

[workspace]
members = [
    "crates/core",
    "crates/common",
    "apps/frontend",
    "apps/server",
    "apps/converter",
]
resolver = "2"

[profile.dev]
incremental = false

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smol_str = { version = "0.3", features = ["serde"] }
postcard = { version = "1.0", features = ["use-std"] }
anyhow = "1.0"
async-trait = "0.1"
csv = "1.3"
yew = { version = "0.22.0", features = ["csr"] }
yew-router = "0.19.0"
gloo-net = "0.6"
gloo-console = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
futures = "0.3"
hex = "0.4"
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
indicatif = "0.18"
uuid = { version = "1.21.0", features = ["v4", "serde", "fast-rng", "js"] }
rayon = "1.11.0"
parking_lot = "0.12.5"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlElement", "HtmlInputElement", "HtmlSelectElement", "Window", "Document", "console"] }
lzma-rust2 = "0.16.2"
binary-layout = "4.0.2"
tar = "0.4"
dashmap = "6.1.0"
thiserror = "2.0.18"

# Internal crates
mp-stats-core = { path = "crates/core" }
mp-stats-common = { path = "crates/common" }
