[workspace.package]
edition = "2024"

[package]
name = "mp-stats-platform"
version = "0.6.0"
publish = false

[workspace]
members = [
    "crates/core",
    "crates/common",
    "apps/frontend",
    "apps/server",
    "apps/converter",
]
resolver = "2"

[profile.dev]
incremental = false

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smol_str = { version = "0.3.5", features = ["serde"] }
postcard = { version = "1.1.3", features = ["use-std"] }
anyhow = "1.0.102"
yew = { version = "0.22.0", features = ["csr"] }
yew-router = "0.19.0"
gloo-net = "0.6.0"
gloo-console = "0.3.0"
wasm-bindgen = "0.2.110"
wasm-bindgen-futures = "0.4.60"
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
clap = { version = "4.5.60", features = ["derive"] }
walkdir = "2.5.0"
rayon = "1.11.0"
web-sys = { version = "0.3.87", features = ["HtmlElement", "HtmlInputElement", "HtmlSelectElement", "Window", "Document", "console"] }
lzma-rust2 = "0.16.2"
binary-layout = "4.0.2"
tar = "0.4.44"
dashmap = "6.1.0"
thiserror = "2.0.18"

# Internal crates
mp-stats-core = { path = "crates/core" }
mp-stats-common = { path = "crates/common" }
