[package]
name = "mp-stats-converter"
version = "0.5.0"
edition.workspace = true

[[bin]]
name = "converter"
path = "src/main.rs"

[dependencies]
mp-stats-core = { workspace = true }
mp-stats-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
binary-layout = { workspace = true }
tar = { workspace = true }
dashmap = { workspace = true }
