[package]
name = "mp-stats-frontend"
version = "0.6.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mp-stats-frontend"
path = "src/main.rs"

[dependencies]
mp-stats-core = { workspace = true }
mp-stats-common = { workspace = true }
yew = { workspace = true }
yew-router = { workspace = true }
serde = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
postcard = { workspace = true }
gloo-net = { workspace = true }
gloo-console = { workspace = true }
smol_str = { workspace = true }

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true