[package]
name = "mp-stats-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
mp-stats-common = { path = "../common" }
