[package]
name = "mp-stats-data-client"
version = "0.3.2"
edition.workspace = true

[dependencies]
mp-stats-core = { workspace = true }
mp-stats-common = { workspace = true }
serde = { workspace = true }
smol_str = { workspace = true }
postcard = { workspace = true }
lzma-rust2 = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
csv = { workspace = true }
gloo-net = { workspace = true }
gloo-console = { workspace = true }
