[package]
name = "mp-stats-data-server"
version.workspace = true
edition.workspace = true

[dependencies]
mp-stats-core = { workspace = true }
mp-stats-common = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
