[package]
name = "mp-stats-data-server"
version = "0.2.1"
edition.workspace = true

[dependencies]
mp-stats-core = { workspace = true }
mp-stats-common = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
